[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.0",
    "langchain>=1.1.1",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.2.0",
    "langchain-groq>=1.1.0",
    "langchain-huggingface>=1.1.0",
    "langchain-mongodb>=0.9.0",
    "langchain-neo4j>=0.6.0",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.4",
    "neo4j>=5.28.2",
    "notebook>=7.5.0",
    "pandas>=2.3.3",
    "pinecone>=8.0.0",
    "pinecone-notebooks>=0.1.1",
    "pinecone-text>=0.11.0",
    "pymongo>=4.15.5",
    "pypdf>=6.4.0",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
]
